@@ -26,8 +26,6 @@ AC_CHECK_PROG(EMACS, emacs, emacs, xemacs)
 AC_PATH_LISPDIR
 AC_PATH_ETCDIR
 AC_PATH_INFO_DIR
-AC_CHECK_URL
-AC_CHECK_W3
 AC_SET_BUILD_FLAGS
 GNUS_CHECK_FONTS
 
